#9 Added missing return types

--- a/docs/api-reference/CRMScript.NetServer.NSAddress.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAddress.yml
@@ -47,7 +47,7 @@ items:
   summary: "\nNSLocalizedField[] is a list of LocalizedFieldList objects. Used to store localized information such as formatted address data.\n"
   remarks: 
   syntax: 
-    content: GetLocalizedAddress()
+    content: NSLocalizedField[][] GetLocalizedAddress()
     parameters: []
     return:
       type: CRMScript.NetServer.NSLocalizedField[][]
