--- a/docs/api-reference/CRMScript.NetServer.NSDSAParameters.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDSAParameters.yml
@@ -75,10 +75,10 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: GetG()
+    content: NSBinary GetG()
     parameters: []
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.NetServer.NSBinary
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.GetJ()
   commentId: M:CRMScript.NetServer.NSDSAParameters.GetJ()
@@ -93,10 +93,10 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: GetJ()
+    content: NSBinary GetJ()
     parameters: []
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.NetServer.NSBinary
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.GetP()
   commentId: M:CRMScript.NetServer.NSDSAParameters.GetP()
@@ -111,10 +111,10 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: GetP()
+    content: NSBinary GetP()
     parameters: []
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.NetServer.NSBinary
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.GetQ()
   commentId: M:CRMScript.NetServer.NSDSAParameters.GetQ()
@@ -129,10 +129,10 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: GetQ()
+    content: NSBinary GetQ()
     parameters: []
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.NetServer.NSBinary
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.GetSeed()
   commentId: M:CRMScript.NetServer.NSDSAParameters.GetSeed()
@@ -147,10 +147,10 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: GetSeed()
+    content: NSBinary GetSeed()
     parameters: []
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.NetServer.NSBinary
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.GetY()
   commentId: M:CRMScript.NetServer.NSDSAParameters.GetY()
@@ -165,10 +165,10 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: GetY()
+    content: NSBinary GetY()
     parameters: []
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.NetServer.NSBinary
   example: 
 - uid: CRMScript.NetServer.NSDSAParameters.SetCounter(Integer)
   commentId: M:CRMScript.NetServer.NSDSAParameters.SetCounter(Integer)
