--- a/docs/api-reference/CRMScript.NetServer.NSDuplicateRule.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDuplicateRule.yml
@@ -68,7 +68,7 @@ items:
   summary: ""
   remarks: 
   syntax: 
-    content: GetDisplayTooltip()
+    content: String GetDisplayTooltip()
     parameters: []
     return:
       type: CRMScript.Global.String
@@ -87,10 +87,10 @@ items:
   summary: ""
   remarks: 
   syntax: 
-    content: GetIsActive()
+    content: Bool GetIsActive()
     parameters: []
     return:
-      type: CRMScript.Global.String
+      type: CRMScript.Global.Bool
       description: Indicating if a rule is current active, and should included in the duplicate detection
   example: 
 - uid: CRMScript.NetServer.NSDuplicateRule.GetName()
@@ -106,7 +106,7 @@ items:
   summary: ""
   remarks: 
   syntax: 
-    content: GetName()
+    content: String GetName()
     parameters: []
     return:
       type: CRMScript.Global.String
