--- a/docs/api-reference/CRMScript.NetServer.NSEntityElement.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSEntityElement.yml
@@ -47,10 +47,10 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: GetDescription()
+    content: String GetDescription()
     parameters: []
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.Global.String
   example: 
 - uid: CRMScript.NetServer.NSEntityElement.GetStrippedValue()
   commentId: M:CRMScript.NetServer.NSEntityElement.GetStrippedValue()
@@ -65,10 +65,10 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: GetStrippedValue()
+    content: String GetStrippedValue()
     parameters: []
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.Global.String
   example: 
 - uid: CRMScript.NetServer.NSEntityElement.GetValue()
   commentId: M:CRMScript.NetServer.NSEntityElement.GetValue()
@@ -83,10 +83,10 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: GetValue()
+    content: String GetValue()
     parameters: []
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.Global.String
   example: 
 - uid: CRMScript.NetServer.NSEntityElement.SetDescription(String)
   commentId: M:CRMScript.NetServer.NSEntityElement.SetDescription(String)
