--- a/docs/api-reference/CRMScript.NetServer.NSFieldProperty.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldProperty.yml
@@ -89,10 +89,10 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: GetFieldType()
+    content: String GetFieldType()
     parameters: []
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.Global.String
   example: 
 - uid: CRMScript.NetServer.NSFieldProperty.GetLength()
   commentId: M:CRMScript.NetServer.NSFieldProperty.GetLength()
@@ -107,10 +107,10 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: GetLength()
+    content: Integer GetLength()
     parameters: []
     return:
-      type: CRMScript.Global.Void
+      type: CRMScript.Global.Integer
   example: 
 - uid: CRMScript.NetServer.NSFieldProperty.GetType()
   commentId: M:CRMScript.NetServer.NSFieldProperty.GetType()
