--- a/docs/api-reference/CRMScript.NetServer.NSLocalizedField.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSLocalizedField.yml
@@ -110,7 +110,7 @@ items:
   summary: ""
   remarks: 
   syntax: 
-    content: GetTooltip()
+    content: String GetTooltip()
     parameters: []
     return:
       type: CRMScript.Global.String
