--- a/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSUserAgent.yml
@@ -1033,7 +1033,7 @@ items:
   summary: "\nGets credential users within a user group\n"
   remarks: 
   syntax: 
-    content: GetCredentialUsers(String groupName, String type)
+    content: NSCredentialsGroupUsers GetCredentialUsers(String groupName, String type)
     parameters:
     - id: groupName
       type: CRMScript.Global.String
@@ -1042,7 +1042,7 @@ items:
       type: CRMScript.Global.String
       description: Type of credentials, corresponding to name of plugin and type in the credentials table.
     return:
-      type: 
+      type: CRMScript.NetServer.NSCredentialsGroupUsers
   example: 
 - uid: CRMScript.NetServer.NSUserAgent.GetCredentialUsersInGroup(String,String)
   commentId: M:CRMScript.NetServer.NSUserAgent.GetCredentialUsersInGroup(String,String)
