#9 Added some missing summaries

--- a/docs/api-reference/CRMScript.Native.Cache.yml
+++ b/docs/api-reference/CRMScript.Native.Cache.yml
@@ -18,7 +18,7 @@ items:
   nameWithType: Cache
   fullName: CRMScript.Native.Cache
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.Native.Cache.#ctor
   commentId: M:CRMScript.Native.Cache.#ctor
