--- a/docs/api-reference/CRMScript.Native.DbConverter.yml
+++ b/docs/api-reference/CRMScript.Native.DbConverter.yml
@@ -30,8 +30,8 @@ items:
   nameWithType: DbConverter.#ctor
   fullName: CRMScript.Native.DbConverter.#ctor
   type: Constructor
-  summary: 
-  remarks: "\nThis class is only allowed in a ConverterApp context. Any attempts of using this in any other contexts will yield an exception.\n"
+  summary: "\nInitializes a new instance of the DbConverter class.\n"
+  remarks: "\nAllowed only in a ConverterApp context; otherwise, an exception is thrown.\n"
   syntax: 
     content: DbConverter
   example: 
@@ -102,7 +102,7 @@ items:
   nameWithType: DbConverter.readBatch(String,Integer,Integer,Integer,Integer)
   fullName: CRMScript.Native.DbConverter.readBatch(String,Integer,Integer,Integer,Integer)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void readBatch(String p_0, Integer p_1, Integer p_2, Integer p_3, Integer p_4)
@@ -135,7 +135,7 @@ items:
   nameWithType: DbConverter.setSourceConnection(String,String,String,String,String)
   fullName: CRMScript.Native.DbConverter.setSourceConnection(String,String,String,String,String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void setSourceConnection(String p_0, String p_1, String p_2, String p_3, String p_4)
