--- a/docs/api-reference/CRMScript.Native.HTTP.yml
+++ b/docs/api-reference/CRMScript.Native.HTTP.yml
@@ -350,14 +350,14 @@ items:
   nameWithType: HTTP.hasError()
   fullName: CRMScript.Native.HTTP.hasError()
   type: Method
-  summary: 
-  remarks: "\nChecks if there was an error in the environment.\n"
+  summary: "\nChecks if there was an error in the environment.\n"
+  remarks: ""
   syntax: 
     content: Bool hasError()
     parameters: []
     return:
       type: CRMScript.Global.Bool
-      description: true if there was an error in the environment; otherwise, false
+      description: True if there was an error in the environment; otherwise, false.
   example: 
 - uid: CRMScript.Native.HTTP.open(String)
   commentId: M:CRMScript.Native.HTTP.open(String)
