--- a/docs/api-reference/CRMScript.Native.Inbox.yml
+++ b/docs/api-reference/CRMScript.Native.Inbox.yml
@@ -12,7 +12,7 @@ items:
   nameWithType: Inbox
   fullName: CRMScript.Native.Inbox
   type: Class
-  summary: 
+  summary: "\nA class for managing the inbox.\n"
   example: 
 - uid: CRMScript.Native.Inbox.#ctor
   commentId: M:CRMScript.Native.Inbox.#ctor
@@ -40,13 +40,13 @@ items:
   fullName: CRMScript.Native.Inbox.addSmtpMail(String,String,Integer)
   type: Method
   summary: "\nInserts an SMTP formatted email into Service's inbox, which then will be imported when ejournalCron runs.\n"
-  remarks: "\nThe mail string must conform to the SMTP standard.\n"
+  remarks: 
   syntax: 
     content: Integer addSmtpMail(String smtpMail, String uidl, Integer filterId)
     parameters:
     - id: smtpMail
       type: CRMScript.Global.String
-      description: A string with a SMTP formatted mail
+      description: A string with an SMTP formatted mail. Must conform to the SMTP standard.
     - id: uidl
       type: CRMScript.Global.String
       description: The UIDL for this email. Can be anything, but it has to be unique for each email
