--- a/docs/api-reference/CRMScript.Native.MacroReturnValue.yml
+++ b/docs/api-reference/CRMScript.Native.MacroReturnValue.yml
@@ -16,7 +16,7 @@ items:
   nameWithType: MacroReturnValue
   fullName: CRMScript.Native.MacroReturnValue
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.Native.MacroReturnValue.#ctor
   commentId: M:CRMScript.Native.MacroReturnValue.#ctor
