--- a/docs/api-reference/CRMScript.Native.Notify.yml
+++ b/docs/api-reference/CRMScript.Native.Notify.yml
@@ -29,7 +29,7 @@ items:
   nameWithType: Notify.#ctor
   fullName: CRMScript.Native.Notify.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the Notify class.\n"
   remarks: 
   syntax: 
     content: Notify
