--- a/docs/api-reference/CRMScript.Native.Priority.yml
+++ b/docs/api-reference/CRMScript.Native.Priority.yml
@@ -12,7 +12,7 @@ items:
   nameWithType: Priority
   fullName: CRMScript.Native.Priority
   type: Class
-  summary: 
+  summary: "\nUsed to handle priorities.\n"
   example: 
 - uid: CRMScript.Native.Priority.#ctor
   commentId: M:CRMScript.Native.Priority.#ctor
