--- a/docs/api-reference/CRMScript.Native.SearchEngine.yml
+++ b/docs/api-reference/CRMScript.Native.SearchEngine.yml
@@ -744,7 +744,7 @@ items:
   nameWithType: SearchEngine.executeJSON()
   fullName: CRMScript.Native.SearchEngine.executeJSON()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String executeJSON()
@@ -851,7 +851,7 @@ items:
   nameWithType: SearchEngine.findRelations(String,Bool)
   fullName: CRMScript.Native.SearchEngine.findRelations(String,Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String[] findRelations(String p_0, Bool p_1)
@@ -964,7 +964,7 @@ items:
   nameWithType: SearchEngine.getFieldsJSON()
   fullName: CRMScript.Native.SearchEngine.getFieldsJSON()
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String getFieldsJSON()
