--- a/docs/api-reference/CRMScript.Native.StatLib.yml
+++ b/docs/api-reference/CRMScript.Native.StatLib.yml
@@ -36,7 +36,7 @@ items:
   nameWithType: StatLib.#ctor
   fullName: CRMScript.Native.StatLib.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the StatLib class.\n"
   remarks: 
   syntax: 
     content: StatLib
