--- a/docs/api-reference/CRMScript.Native.TimeSpan.yml
+++ b/docs/api-reference/CRMScript.Native.TimeSpan.yml
@@ -412,7 +412,7 @@ items:
   nameWithType: TimeSpan.toString(Integer,Integer,Integer,Bool)
   fullName: CRMScript.Native.TimeSpan.toString(Integer,Integer,Integer,Bool)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: String toString(Integer mode, Integer lang, Integer maxMode, Bool short)
