--- a/docs/api-reference/CRMScript.Native.TimeZone.yml
+++ b/docs/api-reference/CRMScript.Native.TimeZone.yml
@@ -13,7 +13,7 @@ items:
   nameWithType: TimeZone
   fullName: CRMScript.Native.TimeZone
   type: Class
-  summary: 
+  summary: "\nGives access to timezone info. Call the global function getLocalTimeZone() to get the object.\n"
   example: 
 - uid: CRMScript.Native.TimeZone.#ctor
   commentId: M:CRMScript.Native.TimeZone.#ctor
@@ -25,7 +25,7 @@ items:
   nameWithType: TimeZone.#ctor
   fullName: CRMScript.Native.TimeZone.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the TimeZone class.\n"
   remarks: 
   syntax: 
     content: TimeZone
