--- a/docs/api-reference/CRMScript.Native.Timer.yml
+++ b/docs/api-reference/CRMScript.Native.Timer.yml
@@ -16,7 +16,7 @@ items:
   nameWithType: Timer
   fullName: CRMScript.Native.Timer
   type: Class
-  summary: 
+  summary: # TODO
   example: 
   - "\n<pre><code>Timer timer;\ntimer.start();\n\n// code you want to time\n\ntimer.stop();\nFloat timeTaken = timer.getSeconds();</code></pre>\n"
 - uid: CRMScript.Native.Timer.#ctor
@@ -29,7 +29,7 @@ items:
   nameWithType: Timer.#ctor
   fullName: CRMScript.Native.Timer.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the Timer class.\n"
   remarks: 
   syntax: 
     content: Timer
