--- a/docs/api-reference/CRMScript.NetServer.BatchTaskState.yml
+++ b/docs/api-reference/CRMScript.NetServer.BatchTaskState.yml
@@ -19,7 +19,7 @@ items:
   nameWithType: BatchTaskState
   fullName: CRMScript.NetServer.BatchTaskState
   type: Enum
-  summary: 
+  summary: # TODO
 - uid: CRMScript.NetServer.BatchTaskState.Unknown
   commentId: F:CRMScript.NetServer.BatchTaskState.Unknown
   id: BatchTaskState.Unknown
