--- a/docs/api-reference/CRMScript.NetServer.ChatSessionStatus.yml
+++ b/docs/api-reference/CRMScript.NetServer.ChatSessionStatus.yml
@@ -23,7 +23,7 @@ items:
   nameWithType: ChatSessionStatus
   fullName: CRMScript.NetServer.ChatSessionStatus
   type: Enum
-  summary: 
+  summary: # TODO
 - uid: CRMScript.NetServer.ChatSessionStatus.Invalid
   commentId: F:CRMScript.NetServer.ChatSessionStatus.Invalid
   id: ChatSessionStatus.Invalid
