--- a/docs/api-reference/CRMScript.NetServer.ChatWidgetSize.yml
+++ b/docs/api-reference/CRMScript.NetServer.ChatWidgetSize.yml
@@ -13,7 +13,7 @@ items:
   nameWithType: ChatWidgetSize
   fullName: CRMScript.NetServer.ChatWidgetSize
   type: Enum
-  summary: 
+  summary: # TODO
 - uid: CRMScript.NetServer.ChatWidgetSize.Normal
   commentId: F:CRMScript.NetServer.ChatWidgetSize.Normal
   id: ChatWidgetSize.Normal
