--- a/docs/api-reference/CRMScript.NetServer.EMailPriority.yml
+++ b/docs/api-reference/CRMScript.NetServer.EMailPriority.yml
@@ -17,7 +17,7 @@ items:
   nameWithType: EMailPriority
   fullName: CRMScript.NetServer.EMailPriority
   type: Enum
-  summary: 
+  summary: # TODO
 - uid: CRMScript.NetServer.EMailPriority.NoPriority
   commentId: F:CRMScript.NetServer.EMailPriority.NoPriority
   id: EMailPriority.NoPriority
