--- a/docs/api-reference/CRMScript.NetServer.NSAccessGatewayInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAccessGatewayInfo.yml
@@ -27,7 +27,7 @@ items:
   nameWithType: NSAccessGatewayInfo.#ctor
   fullName: CRMScript.NetServer.NSAccessGatewayInfo.#ctor
   type: Constructor
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: NSAccessGatewayInfo
