--- a/docs/api-reference/CRMScript.NetServer.NSActivityFilter.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSActivityFilter.yml
@@ -33,7 +33,7 @@ items:
   nameWithType: NSActivityFilter.#ctor
   fullName: CRMScript.NetServer.NSActivityFilter.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSActivityFilter class.\n"
   remarks: 
   syntax: 
     content: NSActivityFilter
