--- a/docs/api-reference/CRMScript.NetServer.NSActivityInformationListItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSActivityInformationListItem.yml
@@ -15,7 +15,7 @@ items:
   nameWithType: NSActivityInformationListItem
   fullName: CRMScript.NetServer.NSActivityInformationListItem
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.NetServer.NSActivityInformationListItem.#ctor
   commentId: M:CRMScript.NetServer.NSActivityInformationListItem.#ctor
@@ -27,7 +27,7 @@ items:
   nameWithType: NSActivityInformationListItem.#ctor
   fullName: CRMScript.NetServer.NSActivityInformationListItem.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSActivityInformationListItem class.\n"
   remarks: 
   syntax: 
     content: NSActivityInformationListItem
