--- a/docs/api-reference/CRMScript.NetServer.NSActivitySummary.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSActivitySummary.yml
@@ -29,7 +29,7 @@ items:
   nameWithType: NSActivitySummary.#ctor
   fullName: CRMScript.NetServer.NSActivitySummary.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSActivitySummary class.\n"
   remarks: 
   syntax: 
     content: NSActivitySummary
