--- a/docs/api-reference/CRMScript.NetServer.NSActivitySummaryItem.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSActivitySummaryItem.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSActivitySummaryItem.#ctor
   fullName: CRMScript.NetServer.NSActivitySummaryItem.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSActivitySummaryItem class.\n"
   remarks: 
   syntax: 
     content: NSActivitySummaryItem
