--- a/docs/api-reference/CRMScript.NetServer.NSAddress.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAddress.yml
@@ -29,7 +29,7 @@ items:
   nameWithType: NSAddress.#ctor
   fullName: CRMScript.NetServer.NSAddress.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSAddress class.\n"
   remarks: 
   syntax: 
     content: NSAddress
@@ -63,7 +63,7 @@ items:
   nameWithType: NSAddress.GetWgs84Latitude()
   fullName: CRMScript.NetServer.NSAddress.GetWgs84Latitude()
   type: Method
-  summary: 
+  summary: Latitude (that's north/south), decimal degrees, relative to WGS 84 ellipsoid. SuperOffice ASA is at 59.91892. This value needs no further grid reference or other qualifying information.
   remarks: 
   syntax: 
     content: Float GetWgs84Latitude()
@@ -82,7 +82,7 @@ items:
   nameWithType: NSAddress.GetWgs84Longitude()
   fullName: CRMScript.NetServer.NSAddress.GetWgs84Longitude()
   type: Method
-  summary: 
+  summary: Longitude (that's East/west), decimal degrees, relative to WGS 84 ellipsoid. SuperOffice ASA is at 10.73159. This value needs no further grid reference or other qualifying information.
   remarks: 
   syntax: 
     content: Float GetWgs84Longitude()
@@ -122,14 +122,14 @@ items:
   nameWithType: NSAddress.SetWgs84Latitude(Float)
   fullName: CRMScript.NetServer.NSAddress.SetWgs84Latitude(Float)
   type: Method
-  summary: 
+  summary: Latitude (that's north/south), decimal degrees, relative to WGS 84 ellipsoid. SuperOffice ASA is at 59.91892. This value needs no further grid reference or other qualifying information.
   remarks: 
   syntax: 
     content: Void SetWgs84Latitude(Float latitude)
     parameters:
     - id: latitude
       type: CRMScript.Global.Float
-      description:
+      description: 
     return:
       type: CRMScript.Global.Void
   example: 
@@ -143,7 +143,7 @@ items:
   nameWithType: NSAddress.SetWgs84Longitude(Float)
   fullName: CRMScript.NetServer.NSAddress.SetWgs84Longitude(Float)
   type: Method
-  summary: 
+  summary: Longitude (that's East/west), decimal degrees, relative to WGS 84 ellipsoid. SuperOffice ASA is at 10.73159. This value needs no further grid reference or other qualifying information.
   remarks: 
   syntax: 
     content: Void SetWgs84Longitude(Float longitude)
