--- a/docs/api-reference/CRMScript.NetServer.NSAlarmData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAlarmData.yml
@@ -55,7 +55,7 @@ items:
   nameWithType: NSAlarmData
   fullName: CRMScript.NetServer.NSAlarmData
   type: Class
-  summary: 
+  summary: "\nCarrier object for AlarmData.\n"
   example: 
 - uid: CRMScript.NetServer.NSAlarmData.#ctor
   commentId: M:CRMScript.NetServer.NSAlarmData.#ctor
@@ -67,7 +67,7 @@ items:
   nameWithType: NSAlarmData.#ctor
   fullName: CRMScript.NetServer.NSAlarmData.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSAlarmData class.\n"
   remarks: 
   syntax: 
     content: NSAlarmData
@@ -522,7 +522,7 @@ items:
   nameWithType: NSAlarmData.SetAlarmTime(DateTime)
   fullName: CRMScript.NetServer.NSAlarmData.SetAlarmTime(DateTime)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAlarmTime(DateTime alarmTime)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSAlarmData.SetAppointmentId(Integer)
   fullName: CRMScript.NetServer.NSAlarmData.SetAppointmentId(Integer)
   type: Method
-  summary: ""
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAppointmentId(Integer appointmentId)
@@ -567,9 +567,9 @@ items:
   fullName: CRMScript.NetServer.NSAlarmData.SetAppointmentText(String)
   type: Method
   summary: ""
-  remarks: 
+  remarks: # TODO
   syntax: 
-    content: Void etAppointmentText(String appointmentText)
+    content: Void SetAppointmentText(String appointmentText)
     parameters:
     - id: appointmentText
       type: CRMScript.Global.String
@@ -588,8 +588,8 @@ items:
   nameWithType: NSAlarmData.SetAppointmentType(Integer)
   fullName: CRMScript.NetServer.NSAlarmData.SetAppointmentType(Integer)
   type: Method
-  summary: "\nwhere=no start time,note,docin, docout\n"
-  remarks: 
+  summary: # TODO
+  remarks: "\nwhere=no start time,note,docin, docout\n"
   syntax: 
     content: Void SetAppointmentType(Integer appointmentType)
     parameters:
@@ -676,7 +676,7 @@ items:
   nameWithType: NSAlarmData.SetContactFullName(String)
   fullName: CRMScript.NetServer.NSAlarmData.SetContactFullName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetContactFullName(String contactFullName)
@@ -940,7 +940,7 @@ items:
   nameWithType: NSAlarmData.SetSaleName(String)
   fullName: CRMScript.NetServer.NSAlarmData.SetSaleName(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetSaleName(String saleName)
