--- a/docs/api-reference/CRMScript.Native.MacroParameter.yml
+++ b/docs/api-reference/CRMScript.Native.MacroParameter.yml
@@ -31,7 +31,7 @@ items:
   nameWithType: MacroParameter
   fullName: CRMScript.Native.MacroParameter
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.Native.MacroParameter.#ctor
   commentId: M:CRMScript.Native.MacroParameter.#ctor
