--- a/docs/api-reference/CRMScript.Native.SpmCustomerList.yml
+++ b/docs/api-reference/CRMScript.Native.SpmCustomerList.yml
@@ -18,7 +18,7 @@ items:
   nameWithType: SpmCustomerList
   fullName: CRMScript.Native.SpmCustomerList
   type: Class
-  summary: 
+  summary: # TODO
   example: 
 - uid: CRMScript.Native.SpmCustomerList.#ctor
   commentId: M:CRMScript.Native.SpmCustomerList.#ctor
