--- a/docs/api-reference/CRMScript.NetServer.GeneratorEncoding.yml
+++ b/docs/api-reference/CRMScript.NetServer.GeneratorEncoding.yml
@@ -25,7 +25,7 @@ items:
   nameWithType: GeneratorEncoding
   fullName: CRMScript.NetServer.GeneratorEncoding
   type: Enum
-  summary: 
+  summary: # TODO
 - uid: CRMScript.NetServer.GeneratorEncoding.Text
   commentId: F:CRMScript.NetServer.GeneratorEncoding.Text
   id: GeneratorEncoding.Text
