--- a/docs/api-reference/CRMScript.NetServer.NSAddressSyncData.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSAddressSyncData.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSAddressSyncData
   fullName: CRMScript.NetServer.NSAddressSyncData
   type: Class
-  summary: 
+  summary: "\nCarrier object for AddressSyncData.\n"
   example: 
 - uid: CRMScript.NetServer.NSAddressSyncData.#ctor
   commentId: M:CRMScript.NetServer.NSAddressSyncData.#ctor
@@ -47,7 +47,7 @@ items:
   nameWithType: NSAddressSyncData.#ctor
   fullName: CRMScript.NetServer.NSAddressSyncData.#ctor
   type: Constructor
-  summary: 
+  summary: "\nInitializes a new instance of the NSAddressSyncData class.\n"
   remarks: 
   syntax: 
     content: NSAddressSyncData
@@ -302,7 +302,7 @@ items:
   nameWithType: NSAddressSyncData.SetAddress1(String)
   fullName: CRMScript.NetServer.NSAddressSyncData.SetAddress1(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAddress1(String address1)
@@ -324,7 +324,7 @@ items:
   nameWithType: NSAddressSyncData.SetAddress2(String)
   fullName: CRMScript.NetServer.NSAddressSyncData.SetAddress2(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAddress2(String address2)
@@ -346,7 +346,7 @@ items:
   nameWithType: NSAddressSyncData.SetAddress3(String)
   fullName: CRMScript.NetServer.NSAddressSyncData.SetAddress3(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetAddress3(String address3)
@@ -390,8 +390,8 @@ items:
   nameWithType: NSAddressSyncData.SetAddressType(Integer)
   fullName: CRMScript.NetServer.NSAddressSyncData.SetAddressType(Integer)
   type: Method
-  summary: 
-  remarks: "\nSee <xref href=\"CRMScript.NetServer.AddressType\" data-throw-if-not-resolved=\"false\"></xref>\n"
+  summary: # TODO
+  remarks: 
   syntax: 
     content: Void SetAddressType(Integer addressType)
     parameters:
@@ -412,7 +412,7 @@ items:
   nameWithType: NSAddressSyncData.SetCity(String)
   fullName: CRMScript.NetServer.NSAddressSyncData.SetCity(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCity(String city)
@@ -434,7 +434,7 @@ items:
   nameWithType: NSAddressSyncData.SetCounty(String)
   fullName: CRMScript.NetServer.NSAddressSyncData.SetCounty(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetCounty(String county)
@@ -456,7 +456,7 @@ items:
   nameWithType: NSAddressSyncData.SetFormattedAddress(String)
   fullName: CRMScript.NetServer.NSAddressSyncData.SetFormattedAddress(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetFormattedAddress(String formattedAddress)
@@ -478,7 +478,7 @@ items:
   nameWithType: NSAddressSyncData.SetLatitude(Float)
   fullName: CRMScript.NetServer.NSAddressSyncData.SetLatitude(Float)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLatitude(Float latitude)
@@ -500,7 +500,7 @@ items:
   nameWithType: NSAddressSyncData.SetLongitude(Float)
   fullName: CRMScript.NetServer.NSAddressSyncData.SetLongitude(Float)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetLongitude(Float longitude)
@@ -522,7 +522,7 @@ items:
   nameWithType: NSAddressSyncData.SetState(String)
   fullName: CRMScript.NetServer.NSAddressSyncData.SetState(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetState(String state)
@@ -544,7 +544,7 @@ items:
   nameWithType: NSAddressSyncData.SetZipCode(String)
   fullName: CRMScript.NetServer.NSAddressSyncData.SetZipCode(String)
   type: Method
-  summary: 
+  summary: # TODO
   remarks: 
   syntax: 
     content: Void SetZipCode(String zipCode)
