#9 changed intellisence to so.intellisence

--- a/docs/api-reference/CRMScript.Global.Byte.yml
+++ b/docs/api-reference/CRMScript.Global.Byte.yml
@@ -40,7 +40,7 @@ items:
 - uid: CRMScript.Global.Byte.toHex()
   commentId: M:CRMScript.Global.Byte.toHex()
   id: toHex()
-  intellisense: Byte.toHex
+  so.intellisense: Byte.toHex
   langs:
   - crmscript
   parent: CRMScript.Global.Byte
@@ -58,7 +58,7 @@ items:
 - uid: CRMScript.Global.Byte.toHex(Integer)
   commentId: M:CRMScript.Global.Byte.toHex(Integer)
   id: toHex(Integer)
-  intellisense: Byte.toHex
+  so.intellisense: Byte.toHex
   langs:
   - crmscript
   parent: CRMScript.Global.Byte
@@ -79,7 +79,7 @@ items:
 - uid: CRMScript.Global.Byte.toString()
   commentId: M:CRMScript.Global.Byte.toString()
   id: toString()
-  intellisense: Byte.toString
+  so.intellisense: Byte.toString
   langs:
   - crmscript
   parent: CRMScript.Global.Byte
@@ -96,7 +96,7 @@ items:
 - uid: CRMScript.Global.Byte.toInteger()
   commentId: M:CRMScript.Global.Byte.toInteger()
   id: toInteger()
-  intellisense: Byte.toInteger
+  so.intellisense: Byte.toInteger
   langs:
   - crmscript
   parent: CRMScript.Global.Byte
@@ -113,7 +113,7 @@ items:
 - uid: CRMScript.Global.Byte.toBool()
   commentId: M:CRMScript.Global.Byte.toBool()
   id: toBool()
-  intellisense: Byte.toBool
+  so.intellisense: Byte.toBool
   langs:
   - crmscript
   parent: CRMScript.Global.Byte
