--- a/docs/api-reference/CRMScript.Global.Date.yml
+++ b/docs/api-reference/CRMScript.Global.Date.yml
@@ -199,7 +199,7 @@ items:
 - uid: CRMScript.Global.Date.getWeek()
   commentId: M:CRMScript.Global.Date.getWeek()
   id: getWeek()
-  intellisense: Date.getWeek
+  so.intellisense: Date.getWeek
   langs:
   - crmscript
   parent: CRMScript.Global.Date
