--- a/docs/api-reference/CRMScript.Global.Integer.yml
+++ b/docs/api-reference/CRMScript.Global.Integer.yml
@@ -64,7 +64,7 @@ items:
 - uid: CRMScript.Global.Integer.toString()
   commentId: M:CRMScript.Global.Integer.toString()
   id: toString()
-  intellisense: Integer.toString
+  so.intellisense: Integer.toString
   langs:
   - crmscript
   parent: CRMScript.Global.Integer
