--- a/docs/api-reference/CRMScript.Global.String.yml
+++ b/docs/api-reference/CRMScript.Global.String.yml
@@ -552,7 +552,7 @@ items:
 - uid: CRMScript.Global.String.findLast(String)
   commentId: M:CRMScript.Global.String.findLast(String)
   id: findLast(String)
-  intellisense: String.findLast
+  so.intellisense: String.findLast
   langs:
   - crmscript
   parent: CRMScript.Global.String
@@ -795,7 +795,7 @@ items:
 - uid: CRMScript.Global.String.isNull()
   commentId: M:CRMScript.Global.String.isNull()
   id: isNull()
-  intellisense: String.isNull
+  so.intellisense: String.isNull
   langs:
   - crmscript
   parent: CRMScript.Global.String
@@ -961,7 +961,7 @@ items:
 - uid: CRMScript.Global.String.escape(String)
   commentId: M:CRMScript.Global.String.escape(String)
   id: escape(String)
-  intellisense: String.escape
+  so.intellisense: String.escape
   langs:
   - crmscript
   parent: CRMScript.Global.String
@@ -1078,7 +1078,7 @@ items:
 - uid: CRMScript.Global.String.getEmails()
   commentId: M:CRMScript.Global.String.getEmails()
   id: getEmails()
-  intellisense: String.getEmails
+  so.intellisense: String.getEmails
   langs:
   - crmscript
   parent: CRMScript.Global.String
@@ -1115,7 +1115,7 @@ items:
 - uid: CRMScript.Global.String.getLine()
   commentId: M:CRMScript.Global.String.getLine()
   id: getLine()
-  intellisense: String.getLine
+  so.intellisense: String.getLine
   langs:
   - crmscript
   parent: CRMScript.Global.String
@@ -1327,7 +1327,7 @@ items:
 - uid: CRMScript.Global.String.parseSOMultiLanguageString(Integer)
   commentId: M:CRMScript.Global.String.parseSOMultiLanguageString(Integer)
   id: parseSOMultiLanguageString(Integer)
-  intellisense: String.parseSOMultiLanguageString
+  so.intellisense: String.parseSOMultiLanguageString
   langs:
   - crmscript
   parent: CRMScript.Global.String
@@ -1414,7 +1414,7 @@ items:
 - uid: CRMScript.Global.String.stripLeading(String)
   commentId: M:CRMScript.Global.String.stripLeading(String)
   id: stripLeading(String)
-  intellisense: String.stripLeading
+  so.intellisense: String.stripLeading
   langs:
   - crmscript
   parent: CRMScript.Global.String
@@ -1435,7 +1435,7 @@ items:
 - uid: CRMScript.Global.String.stripLeadingAndTrailing(String)
   commentId: M:CRMScript.Global.String.stripLeadingAndTrailing(String)
   id: stripLeadingAndTrailing(String)
-  intellisense: String.stripLeadingAndTrailing
+  so.intellisense: String.stripLeadingAndTrailing
   langs:
   - crmscript
   parent: CRMScript.Global.String
@@ -1456,7 +1456,7 @@ items:
 - uid: CRMScript.Global.String.stripTrailing(String)
   commentId: M:CRMScript.Global.String.stripTrailing(String)
   id: stripTrailing(String)
-  intellisense: String.stripTrailing
+  so.intellisense: String.stripTrailing
   langs:
   - crmscript
   parent: CRMScript.Global.String
