--- a/docs/api-reference/CRMScript.Global.Vector.yml
+++ b/docs/api-reference/CRMScript.Global.Vector.yml
@@ -85,7 +85,7 @@ items:
 - uid: CRMScript.Global.Vector.get(Integer)
   commentId: M:CRMScript.Global.Vector.get(Integer)
   id: get(Integer)
-  intellisense: Vector.get
+  so.intellisense: Vector.get
   langs:
   - crmscript
   parent: CRMScript.Global.Vector
@@ -106,7 +106,7 @@ items:
 - uid: CRMScript.Global.Vector.set(Integer, String)
   commentId: M:CRMScript.Global.Vector.set(Integer, String)
   id: set(Integer, String)
-  intellisense: Vector.set
+  so.intellisense: Vector.set
   langs:
   - crmscript
   parent: CRMScript.Global.Vector
