#9 fixed consistency of so.intellisense

--- a/docs/api-reference/CRMScript.Global.Map.yml
+++ b/docs/api-reference/CRMScript.Global.Map.yml
@@ -343,7 +343,7 @@ items:
 - uid: CRMScript.Global.Map.next()
   commentId: M:CRMScript.Global.Map.next()
   id: next()
-  so:intellisense: Map.next
+  so.intellisense: Map.next
   langs:
   - crmscript
   parent: CRMScript.Global.Map
