--- a/docs/api-reference/CRMScript.Global.String.yml
+++ b/docs/api-reference/CRMScript.Global.String.yml
@@ -413,7 +413,7 @@ items:
 - uid: CRMScript.Global.String.caseCompare(String)
   commentId: M:CRMScript.Global.String.caseCompare(String)
   id: caseCompare(String)
-  se.intellisense: String.caseCompare
+  so.intellisense: String.caseCompare
   langs:
   - crmscript
   parent: CRMScript.Global.String
